commit docker file

--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,4 +1,7 @@
 # it adds metadata to the image. helpful to filter the images will not effect the funcitonality
+# docker images -f 'label=duration=5 mins'
+# docker inspect 2c
+
 
 FROM almalinux:9
 LABEL author="sekhar" \
