--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -2,5 +2,6 @@ FROM almalinux:9
 RUN mkdir /tmp/wrkdir
 RUN cd /tmp/wrkdir
 RUN pwd
-RUN echo "hello i am at $pwd" > hello.txt
+WORKDIR /tmp/wrkdir
+RUN echo "hello" > hello.txt
 CMD [ "sleep", "100" ]
