--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,3 +1,5 @@
 FROM almalinux:9
 ARG course="Devops" \
     duration="120 Hrs"
+RUN echo course:$course, duration: $duration
+CMD [ "sleep", "100" ]
