--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,5 +1,8 @@
 FROM almalinux:9
 ARG course="Devops" \
     duration="120 Hrs"
-RUN echo course:$course, duration: $duration
+ENV course="Devops" \
+    author="siva" \
+    duration="120 Hrs"
+RUN echo course:$course, duration: $duration, author: $author
 CMD [ "sleep", "100" ]
