commit docker file

--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,8 +1,8 @@
 FROM almalinux:9
 ARG course="Devops" \
     duration="120 Hrs"
-ENV course="Devops" \
+ENV course-env="Devops" \
     author="siva" \
-    duration="120 Hrs"
-RUN echo course:$course, duration: $duration, author: $author
+    duration-env="120 Hrs"
+RUN echo course:$course, duration: $duration, author: $author, course-env: ${course-env}, duration-env: ${duration-env}
 CMD [ "sleep", "100" ]
